.archive/kubernetes/apps/default/syncthing/relay/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing-relay
  annotations:
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.kubernetes.io/exclude-unifi: "true"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`relay.${SECRET_DOMAIN}`)
    services:
    - name: syncthing-relay
      port: 8443
  tls:
    passthrough: true
